<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OK Поток</string>
    <string name="loading">Идет загрузка…</string>
    <string name="login">Войти</string>
    <string name="owner">Владелец</string>
    <string name="sample">Пример</string>
    <string name="album">Альбом</string>
    <string name="albums">Альбомы</string>
    <string name="all_photos">Все фотографии</string>
    <string name="photoStream">Фотографии</string>
    <string name="my_albums">Мои альбомы</string>
    <string name="my_friends">Мои друзья</string>
    <string name="my_groups">Мои группы</string>
    <string name="my_photo">Моя фотография</string>
    <string name="private_album">Личный альбом</string>
    <string name="uploaded">Загружена</string>
    <string name="getting_friend_list">Получение списка друзей</string>
    <string name="getting_group_list">Получение списка групп</string>
    <string name="getting_your_albums">Получение ваших альбомов</string>
    <string name="getting_your_photos">Получение ваших фотографий</string>
    <string name="getting_friends_albums_and_photos">Получение альбомов и фотографий друзей</string>
    <string name="getting_groups_albums_and_photos">Получение альбомов и фотографий групп</string>
    <string name="processing_data">Обработка данных</string>
    <string name="download_is_finished">Загрузка завершена</string>
    <string name="you_liked_this">Вы уже поставили "Класс!"</string>
    <string name="cant_add_like">Не удалось поставить "Класс!"</string>
    <string name="uploadToAlbum">Загрузить в личный альбом</string>
    <string name="takeCameraPicture">Сделать снимок</string>
    <string name="uploadSuccess">Фотография загружена в личный альбом</string>
    <string name="uploadFailure">Невозможно получить адрес для загрузки.</string>
    <string name="uploadActivity_title">Загрузка фотографии</string>
    <string name="cameraActivity_title">Получение фотоснимка</string>
    <string name="uploadStarting">Загружается...</string>
    <string name="cameraIsNotAvailable">Камера недоступна</string>
    <string name="NoFilter">Без фильтра</string>
    <string name="Negative">Негатив</string>
    <string name="Grayscale">Серые тона</string>
    <string name="Sepia">Сепия</string>
    <string name="Polaroid">Поляроид</string>
    <string name="VintageBlackAndWhite">Старинный ч/б</string>
    <string name="Nashville">Nashville</string>
    <string name="Sierra">Sierra</string>
    <string name="Valencia">Valencia</string>
    <string name="Walden">Walden</string>
    <string name="Hudson">Hudson</string>
    <string name="Amaro">Amaro</string>
    <string name="Rise">Rise</string>
    <string name="Y1977">1977</string>
    <string name="Random">Случайный</string>
    <string name="Special">Особый</string>
    <string name="TealAndOrange">Кинематограф</string>
    <string name="Smooth">Мягкие цвета</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Xpro">XPro</string>
    <string name="Toaster">Toaster</string>
    <string name="ColorReduction">16 бит</string>
    <string name="Brightness">Яркость</string>
    <string name="Contrast">Контраст</string>
    <string name="Saturation">Насыщенность</string>
    <string name="DarkRegions">Тени</string>
    <string name="LightRegions">Светлые участки</string>
    <string name="take_photo">Take photo</string>
    <string name="ToLoad">К загрузке</string>
    <string name="likeButtonText">Класс!</string>
    <string name="RetinexRed">Retinex red</string>
    <string name="RetinexBlue">Retinex blue</string>
    <string name="RetinexGreen">Retinex green</string>
    <string name="GreyWorld">Grey World</string>
    <string name="WhitePatch">White Patch</string>
    <string name="GIMP">GIMP filter</string>
    <string name="NoWhiteBalance">Без баланса белого</string>
    <string name="Temperature">Тепло</string>
    <string name="MirrorVertically">Mirror Vertically</string>
    <string name="MirrorHorizontally">Mirror Horizontally</string>
    <string name="RotateClockwise">Rotate Clockwise</string>
    <string name="RotateCounterclockwise">Rotate Counterclockwise</string>
    <string name="IncandescentLamp">Лампа накаливания</string>
    <string name="Sunrise">Восход</string>
    <string name="FluorescentLampWhite">Люминесцентная лампа (белый)</string>
    <string name="Midday">Полдень</string>
    <string name="Cloudy">Облака</string>
    <string name="Twilight">Сумерки</string>
    <string name="PolarSky">Полярное небо</string>
    <string name="FluorescentLampDay">Лампа дневного света</string>
    <string name="ClearDay">Ясный день</string>
    <string name="sample_big_text">Первое, что мы сделаем — это создадим файлы layout. Нам потребуется основной layout с
        использованием фрагмента и еще три для «заполнения» самого фрагмента (будут соответствовать трем пунктам меню).
        Обратите внимание, что мы будем использовать Support Library для поддержки устройств со старыми версиями
        Андроида.
    </string>
    <string name="ImageFilters">Фильтры</string>
    <string name="FilterPower">Сила фильтра</string>
    <string name="Exposure">Выдержка</string>
    <string name="Sharpness">Резкость</string>
    <string name="Vignette">Виньетка</string>
    <string name="AddComment">Добавьте описание к фото</string>
    <string name="EightBit">8 бит</string>
    <string name="take_video">Сделать видео</string>
    <string name="videouploadactivity_title">Загрузка видео</string>
    <string name="AddVideoTitle">Название видео</string>
    <string name="NoTitle">Без названия</string>
    <string name="friends_and_groups">ДРУЗЬЯ И ГРУППЫ</string>
    <string name="Settings">Настройки</string>
    <string name="Rotation">Поворот</string>
    <string name="Editing">Редактирование</string>
    <string name="Description">Описание к фото</string>
    <string name="UploadPhoto">Загрузить фото</string>
    <string name="Camera">Сделать фото</string>
    <string name="RollChangesBack">Отменить все сделанные изменения?</string>
    <string name="PhotoIsProcessed">Фото обрабатывается...</string>
</resources>